measure tool memoryleak #68320

Closed
opened 2019-08-06 16:51:57 +02:00 by Philipp Oeser · 5 comments
Member

System Information
Operating system: fedora 30, 5.1.16-300.fc30.x86_64
Graphics card: nvidia 970m, 430.26 drivers

Blender Version
Broken: 45ae33a952, master, 2019-08-06
Worked: (optional)

Short description of error
the measuer tool leaks memory

Exact steps for others to reproduce the error
from the startup scene:

  • select default cube
  • enter editmode
  • select the Measure tool
  • create a measure
  • hold CTRL to enable snapping
  • move over the mesh (measure will snap to verts/edges)
  • release LMB so the tool finishes
  • exit blender
  • see memory leak

Error: Not freed memory blocks: 259, total unfreed memory 0.083527 MB

ASAN

Direct leak of 4824 byte(s) in 201 object(s) allocated from:
    - 0 0x7f758ac58ca8 in __interceptor_malloc (/lib64/libasan.so.5+0x10dca8)
    - 1 0x25dc5b3 in MEM_lockfree_mallocN /intern/guardedalloc/intern/mallocn_lockfree_impl.c:308
    - 2 0x2363368 in BLI_linklist_prepend /source/blender/blenlib/intern/BLI_linklist.c:176
    - 3 0x223c62b in bvhcache_insert /source/blender/blenkernel/intern/bvhutils.c:1486
    - 4 0x2237ede in bvhtree_from_editmesh_edges /source/blender/blenkernel/intern/bvhutils.c:745
    - 5 0x46193a5 in snapEditMesh /source/blender/editors/transform/transform_snap_object.c:2265
    - 6 0x4619f31 in snapObject /source/blender/editors/transform/transform_snap_object.c:2374
    - 7 0x461a385 in sanp_obj_cb /source/blender/editors/transform/transform_snap_object.c:2445
    - 8 0x4609e0e in iter_snap_objects /source/blender/editors/transform/transform_snap_object.c:238
    - 9 0x461a629 in snapObjectsRay /source/blender/editors/transform/transform_snap_object.c:2512
    - 10 0x461bf86 in transform_snap_context_project_view3d_mixed_impl /source/blender/editors/transform/transform_snap_object.c:2796
    - 11 0x461c415 in ED_transform_snap_object_project_view3d_ex /source/blender/editors/transform/transform_snap_object.c:2841
    - 12 0x461c475 in ED_transform_snap_object_project_view3d /source/blender/editors/transform/transform_snap_object.c:2865
    - 13 0x4449ca3 in view3d_ruler_item_mousemove /source/blender/editors/space_view3d/view3d_gizmo_ruler.c:367
    - 14 0x444e1a2 in gizmo_ruler_modal /source/blender/editors/space_view3d/view3d_gizmo_ruler.c:900
    - 15 0x2c5208b in gizmo_tweak_modal /source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c:564
    - 16 0x2bcbbc5 in wm_handler_operator_call /source/blender/windowmanager/intern/wm_event_system.c:2186
    - 17 0x2bd047f in wm_handlers_do_intern /source/blender/windowmanager/intern/wm_event_system.c:2897
    - 18 0x2bd07a9 in wm_handlers_do /source/blender/windowmanager/intern/wm_event_system.c:2945
    - 19 0x2bd3160 in wm_event_do_handlers /source/blender/windowmanager/intern/wm_event_system.c:3323
    - 20 0x2bb4753 in WM_main /source/blender/windowmanager/intern/wm.c:417
    - 21 0x1b50fd0 in main /source/creator/creator.c:491
**System Information** Operating system: fedora 30, 5.1.16-300.fc30.x86_64 Graphics card: nvidia 970m, 430.26 drivers **Blender Version** Broken: 45ae33a952, master, 2019-08-06 Worked: (optional) **Short description of error** the measuer tool leaks memory **Exact steps for others to reproduce the error** from the startup scene: - select default cube - enter editmode - select the `Measure` tool - create a measure - hold CTRL to enable snapping - move over the mesh (measure will snap to verts/edges) - release LMB so the tool finishes - exit blender - see memory leak `Error: Not freed memory blocks: 259, total unfreed memory 0.083527 MB` ASAN ``` Direct leak of 4824 byte(s) in 201 object(s) allocated from: - 0 0x7f758ac58ca8 in __interceptor_malloc (/lib64/libasan.so.5+0x10dca8) - 1 0x25dc5b3 in MEM_lockfree_mallocN /intern/guardedalloc/intern/mallocn_lockfree_impl.c:308 - 2 0x2363368 in BLI_linklist_prepend /source/blender/blenlib/intern/BLI_linklist.c:176 - 3 0x223c62b in bvhcache_insert /source/blender/blenkernel/intern/bvhutils.c:1486 - 4 0x2237ede in bvhtree_from_editmesh_edges /source/blender/blenkernel/intern/bvhutils.c:745 - 5 0x46193a5 in snapEditMesh /source/blender/editors/transform/transform_snap_object.c:2265 - 6 0x4619f31 in snapObject /source/blender/editors/transform/transform_snap_object.c:2374 - 7 0x461a385 in sanp_obj_cb /source/blender/editors/transform/transform_snap_object.c:2445 - 8 0x4609e0e in iter_snap_objects /source/blender/editors/transform/transform_snap_object.c:238 - 9 0x461a629 in snapObjectsRay /source/blender/editors/transform/transform_snap_object.c:2512 - 10 0x461bf86 in transform_snap_context_project_view3d_mixed_impl /source/blender/editors/transform/transform_snap_object.c:2796 - 11 0x461c415 in ED_transform_snap_object_project_view3d_ex /source/blender/editors/transform/transform_snap_object.c:2841 - 12 0x461c475 in ED_transform_snap_object_project_view3d /source/blender/editors/transform/transform_snap_object.c:2865 - 13 0x4449ca3 in view3d_ruler_item_mousemove /source/blender/editors/space_view3d/view3d_gizmo_ruler.c:367 - 14 0x444e1a2 in gizmo_ruler_modal /source/blender/editors/space_view3d/view3d_gizmo_ruler.c:900 - 15 0x2c5208b in gizmo_tweak_modal /source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c:564 - 16 0x2bcbbc5 in wm_handler_operator_call /source/blender/windowmanager/intern/wm_event_system.c:2186 - 17 0x2bd047f in wm_handlers_do_intern /source/blender/windowmanager/intern/wm_event_system.c:2897 - 18 0x2bd07a9 in wm_handlers_do /source/blender/windowmanager/intern/wm_event_system.c:2945 - 19 0x2bd3160 in wm_event_do_handlers /source/blender/windowmanager/intern/wm_event_system.c:3323 - 20 0x2bb4753 in WM_main /source/blender/windowmanager/intern/wm.c:417 - 21 0x1b50fd0 in main /source/creator/creator.c:491 ```
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Germano Cavalcante was assigned by Philipp Oeser 2019-08-06 16:56:21 +02:00
Author
Member

Added subscribers: @mano-wii, @ideasman42

Added subscribers: @mano-wii, @ideasman42
Author
Member

Measure tool will actually call ED_transform_snap_object_context_destroy on exit/finish, but for some reason the sod->bvh_trees are all NULL (even though bvhtree_from_editmesh_edges allocated them for these?)

Not quite sure whats wrong, @mano-wii: could you check?
CC @ideasman42

Measure tool will actually call `ED_transform_snap_object_context_destroy` on exit/finish, but for some reason the `sod->bvh_trees` are all NULL (even though `bvhtree_from_editmesh_edges` allocated them for these?) Not quite sure whats wrong, @mano-wii: could you check? CC @ideasman42

This issue was referenced by 467b0aa227

This issue was referenced by 467b0aa227d454f714e43d2421a86c4dfac92d1e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68320
No description provided.